--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -40,7 +40,7 @@
             <sui-select-option value="Noche">Noche</sui-select-option>    
           </sui-select>
         </div>                
-        <button class="ui blue button" type="button" (click)="abreMes(fecha, turno, lugar, municipio.value)">Abrir Informe Mensual</button>
+        <button class="ui blue button" type="button" (click)="abreMes(fecha, turno, lugar, municipio)">Abrir Informe Mensual</button>
       </div>      
     </div>
   </div>
