--- a/src/app/operarios/operarios-lista/operarios-lista.component.html
+++ b/src/app/operarios/operarios-lista/operarios-lista.component.html
@@ -5,10 +5,10 @@
   <a [routerLink]="['detalle']">Nuevo</a> 
 </nav>
 <br>
-<div class="ui relaxed divided list">
-  <div class="item" *ngFor="let operario of listaOperarios">
-    <div class="content">
-      <a [routerLink]="['/dash/operarios/detalle', operario._id]" class="header">{{ operario.nombre }}</a>
+<div>
+  <div *ngFor="let operario of listaOperarios">
+    <div>
+      <a [routerLink]="['/dash/operarios/detalle', operario._id]">{{ operario.nombre }}</a>
     </div>
   </div>
 </div>
