--- a/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
+++ b/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
@@ -1,10 +1,10 @@
 <p>
   Selecciona fecha para ver los partes
 </p>
-<button class="ui button" (click)="nuevoParte()">
+<button (click)="nuevoParte()">
   Nuevo
 </button>
-<div class="ui horizontal divider">
+<div>
   Selecciona fecha
 </div>
 <div>
