--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <div>
-  <div class="ui massive message">
+  <div>
     ACCESO A LA APLICACION GESTION LIMPIEZA DE PLAYAS. RA BENIDORM. 2017
   </div>
 </div>
 
-<form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit(loginForm)" class="ui form">
-  <div class="inline field">
+<form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit(loginForm)">
+  <div>
     <label>
       Clave
     </label>
@@ -14,21 +14,20 @@
       placeholder="Introduce clave"
       name="password"
       formControlName="password">   
-    <sui-message class="attached warning" [isDismissable]="false" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">
-        <div class="header">
+    <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">
+        <div>
             Atención
         </div>
         <p>Campo clave necesario..</p>
-    </sui-message>    
+      </div>    
     <div *ngIf="errorPass" class="ui negative message">Clave incorrecta.</div>
   </div>
-  <button class="ui button" type="submit">Aceptar</button>
+  <button type="submit">Aceptar</button>
 </form>
 <br>
-
-<sui-message class="success">
-  <div class="header">
+<div>
+  <div>
       Nota informativa!
   </div>
-  <p>Nueva version 1.1.x en desarrollo v. 2017-09-14</p>
-</sui-message>
+  <p>Nueva version 1.1.x en desarrollo v. 2017-09-18</p>
+</div>
