--- a/src/app/operarios/operarios-lista/operarios-lista.component.html
+++ b/src/app/operarios/operarios-lista/operarios-lista.component.html
@@ -1,9 +1,9 @@
 <p>
   Listado de operarios
 </p>
-<nav>
-  <a [routerLink]="['detalle']">Nuevo</a> 
-</nav>
+
+<a [routerLink]="['detalle']" class="button">Nuevo</a> 
+
 <br>
 <div>
   <div *ngFor="let operario of listaOperarios">
